src/test/ui/span/issue-42234-unknown-receiver-type.full.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:10:7
   |
LL |     x.unwrap().method_that_could_exist_on_some_type();
   |     --^^^^^^--
   |     | |
   |     | cannot infer type for type parameter `T`
   |     this method call resolves to `T`
   |
   = note: type must be known at this point

error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:16:10
   |
LL |         .sum::<_>()
   |          ^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
